--- a/blocks/future-building/future-building.css
+++ b/blocks/future-building/future-building.css
@@ -605,6 +605,11 @@
   gap: 16px;
 }
 @media (max-width: 768px) {
+  .section.key-investing.future-building-container .library-btn2 .future-building .swiper-wrapper {
+    gap: 0;
+  }
+}
+@media (max-width: 768px) {
   .section.key-investing.future-building-container .library-btn2 .future-building .swiper-wrapper .swiper-slide {
     width: 100% !important;
   }
