--- a/blocks/future-building/future-building.scss
+++ b/blocks/future-building/future-building.scss
@@ -635,9 +635,20 @@
     .library-btn {
         &1 {
             padding: 40px 0;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 20px;
+
+            @include media(desktop-sm) {
+                padding: 40px 16px;
+            }
 
             @include media(mobile) {
-                padding: 24px 16px 40px;
+                padding: 24px 16px var(--spacing-40);
+                flex-direction: column;
+                align-items: start;
+                gap: 40px;
             }
 
             h1,
@@ -661,6 +672,81 @@
                     line-height: var(--sub-header-large-line-height);
                 }
             }
+
+            .keyinvest-search {
+                position: relative;
+                min-width: 504px;
+                height: 44px;
+                display: flex;
+                align-items: center;
+                gap: 8px;
+                padding: var(--spacing-10) var(--spacing-8);
+                border-radius: var(--border-radius-6);
+                border: var(--border-width-01) solid var(--strokes-default);
+
+                @include media(mobile) {
+                    min-width: unset;
+                    width: 100%;
+                }
+
+                &::before {
+                    content: "";
+                    background: url("../../icons/search-icon-black.svg") center center no-repeat;
+                    width: 24px;
+                    height: 24px;
+                    display: block;
+                }
+
+                .keyinvest-label,
+                .keyinvest-inp {
+                    @include font-style(
+                        var(--body-medium-regular-size),
+                        var(--body-medium-regular-line-height),
+                        var(--text-body-2),
+                        400,
+                        var(--body)
+                    );
+
+                    @include media(mmobile) {
+                        font-size: var(--body-medium-regular-size);
+                        line-height: var(--body-medium-regular-line-height);
+                    }
+                }
+
+                .keyinvest-inp {
+                    width: 100%;
+                    border: none;
+                    outline: none;
+
+                    &:focus + label {
+                        top: 0;
+                        left: 25px;
+                        padding: 0 4px;
+                        background-color: var(--neutrals-white);
+
+                        @include font-style(
+                            var(--text-link-xsmall-size),
+                            var(--text-link-xsmall-line-height),
+                            var(--blue-1-800-primary),
+                            400,
+                            var(--body)
+                        );
+
+                        @include media(mobile) {
+                            font-size: var(--text-link-xsmall-size);
+                            line-height: var(--text-link-xsmall-line-height);
+                        }
+                    }
+                }
+
+                .keyinvest-label {
+                    position: absolute;
+                    left: 40px;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    transition: all 0.2s ease;
+                }
+            }
         }
 
         &2 {
@@ -671,7 +757,7 @@
             .future-building {
                 margin: 0 0 62px;
 
-                @include media(mobile){
+                @include media(mobile) {
                     margin: 0 0 102px;
                 }
 
@@ -682,20 +768,38 @@
 
                     @include media(mobile) {
                         gap: 0;
+                        margin: 0 0 16px;
                     }
 
                     .swiper-slide {
                         display: flex;
                         flex-direction: column;
 
+                        @include media(desktop-sm) {
+                            width: 32.223% !important;
+                        }
+
+                        @media screen and (width <= 1025px) {
+                            width: 31.88% !important;
+                        }
+
                         @include media(mobile) {
                             width: 100% !important;
                         }
 
                         &-cards-1 {
-                            a.button img {
-                                border-radius: 8px;
-                                opacity: unset;
+                            picture {
+                                width: 100%;
+                                line-height: 0;
+                                height: 100%;
+                                display: block;
+
+                                img {
+                                    border-radius: 8px;
+                                    opacity: unset;
+                                    width: 100%;
+                                    height: 100%;
+                                }
                             }
 
                             &::after {
@@ -704,7 +808,7 @@
                         }
 
                         &-cards-2 {
-                            padding: 24px 0;
+                            padding: var(--spacing-24) 0;
                             display: flex;
                             flex-direction: column;
                             height: 100%;
@@ -747,6 +851,10 @@
                                 &3 {
                                     margin: auto 0 0;
 
+                                    @include media(mobile) {
+                                        margin: 0;
+                                    }
+
                                     .cards-list-1-button1 {
                                         @include font-style(
                                             14px,
@@ -785,7 +893,7 @@
                     gap: 18px;
                     width: 100%;
 
-                    @include media(mobile){
+                    @include media(mobile) {
                         left: 0;
                         right: 0;
                         margin: 0 auto;
@@ -793,10 +901,9 @@
                         overflow: auto;
                         scrollbar-width: none;
 
-                        &::-webkit-scrollbar{
+                        &::-webkit-scrollbar {
                             display: none;
                         }
-                        
                     }
                 }
 
