--- a/blocks/future-building/future-building.css
+++ b/blocks/future-building/future-building.css
@@ -564,10 +564,22 @@
 
 .section.key-investing.future-building-container .library-btn1 {
   padding: 40px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
+@media (max-width: 1299px) {
+  .section.key-investing.future-building-container .library-btn1 {
+    padding: 40px 16px;
+  }
 }
 @media (max-width: 768px) {
   .section.key-investing.future-building-container .library-btn1 {
-    padding: 24px 16px 40px;
+    padding: 24px 16px var(--spacing-40);
+    flex-direction: column;
+    align-items: start;
+    gap: 40px;
   }
 }
 .section.key-investing.future-building-container .library-btn1 h1,
@@ -595,6 +607,76 @@
     line-height: var(--sub-header-large-line-height);
   }
 }
+.section.key-investing.future-building-container .library-btn1 .keyinvest-search {
+  position: relative;
+  min-width: 504px;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: var(--spacing-10) var(--spacing-8);
+  border-radius: var(--border-radius-6);
+  border: var(--border-width-01) solid var(--strokes-default);
+}
+@media (max-width: 768px) {
+  .section.key-investing.future-building-container .library-btn1 .keyinvest-search {
+    min-width: unset;
+    width: 100%;
+  }
+}
+.section.key-investing.future-building-container .library-btn1 .keyinvest-search::before {
+  content: "";
+  background: url("../../icons/search-icon-black.svg") center center no-repeat;
+  width: 24px;
+  height: 24px;
+  display: block;
+}
+.section.key-investing.future-building-container .library-btn1 .keyinvest-search .keyinvest-label,
+.section.key-investing.future-building-container .library-btn1 .keyinvest-search .keyinvest-inp {
+  font-size: var(--body-medium-regular-size);
+  line-height: var(--body-medium-regular-line-height);
+  color: var(--text-body-2);
+  font-family: var(--body);
+  font-feature-settings: "ss01" on, "ss04" on, "cv01" on, "cv02" on, "cv03" on, "cv04" on, "cv06" on, "cv09" on, "cv10" on, "cv11" on;
+  font-weight: 400;
+}
+@media (max-width: ) {
+  .section.key-investing.future-building-container .library-btn1 .keyinvest-search .keyinvest-label,
+  .section.key-investing.future-building-container .library-btn1 .keyinvest-search .keyinvest-inp {
+    font-size: var(--body-medium-regular-size);
+    line-height: var(--body-medium-regular-line-height);
+  }
+}
+.section.key-investing.future-building-container .library-btn1 .keyinvest-search .keyinvest-inp {
+  width: 100%;
+  border: none;
+  outline: none;
+}
+.section.key-investing.future-building-container .library-btn1 .keyinvest-search .keyinvest-inp:focus + label {
+  top: 0;
+  left: 25px;
+  padding: 0 4px;
+  background-color: var(--neutrals-white);
+  font-size: var(--text-link-xsmall-size);
+  line-height: var(--text-link-xsmall-line-height);
+  color: var(--blue-1-800-primary);
+  font-family: var(--body);
+  font-feature-settings: "ss01" on, "ss04" on, "cv01" on, "cv02" on, "cv03" on, "cv04" on, "cv06" on, "cv09" on, "cv10" on, "cv11" on;
+  font-weight: 400;
+}
+@media (max-width: 768px) {
+  .section.key-investing.future-building-container .library-btn1 .keyinvest-search .keyinvest-inp:focus + label {
+    font-size: var(--text-link-xsmall-size);
+    line-height: var(--text-link-xsmall-line-height);
+  }
+}
+.section.key-investing.future-building-container .library-btn1 .keyinvest-search .keyinvest-label {
+  position: absolute;
+  left: 40px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all 0.2s ease;
+}
 @media (max-width: 768px) {
   .section.key-investing.future-building-container .library-btn2 {
     padding: 0 16px;
@@ -616,26 +698,45 @@
 @media (max-width: 768px) {
   .section.key-investing.future-building-container .library-btn2 .future-building .swiper-wrapper {
     gap: 0;
+    margin: 0 0 16px;
   }
 }
 .section.key-investing.future-building-container .library-btn2 .future-building .swiper-wrapper .swiper-slide {
   display: flex;
   flex-direction: column;
 }
+@media (max-width: 1299px) {
+  .section.key-investing.future-building-container .library-btn2 .future-building .swiper-wrapper .swiper-slide {
+    width: 32.223% !important;
+  }
+}
+@media screen and (width <= 1025px) {
+  .section.key-investing.future-building-container .library-btn2 .future-building .swiper-wrapper .swiper-slide {
+    width: 31.88% !important;
+  }
+}
 @media (max-width: 768px) {
   .section.key-investing.future-building-container .library-btn2 .future-building .swiper-wrapper .swiper-slide {
     width: 100% !important;
   }
 }
-.section.key-investing.future-building-container .library-btn2 .future-building .swiper-wrapper .swiper-slide-cards-1 a.button img {
+.section.key-investing.future-building-container .library-btn2 .future-building .swiper-wrapper .swiper-slide-cards-1 picture {
+  width: 100%;
+  line-height: 0;
+  height: 100%;
+  display: block;
+}
+.section.key-investing.future-building-container .library-btn2 .future-building .swiper-wrapper .swiper-slide-cards-1 picture img {
   border-radius: 8px;
   opacity: unset;
+  width: 100%;
+  height: 100%;
 }
 .section.key-investing.future-building-container .library-btn2 .future-building .swiper-wrapper .swiper-slide-cards-1::after {
   content: unset;
 }
 .section.key-investing.future-building-container .library-btn2 .future-building .swiper-wrapper .swiper-slide-cards-2 {
-  padding: 24px 0;
+  padding: var(--spacing-24) 0;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -672,6 +773,11 @@
 }
 .section.key-investing.future-building-container .library-btn2 .future-building .swiper-wrapper .swiper-slide-cards-2 .cards-listcards3 {
   margin: auto 0 0;
+}
+@media (max-width: 768px) {
+  .section.key-investing.future-building-container .library-btn2 .future-building .swiper-wrapper .swiper-slide-cards-2 .cards-listcards3 {
+    margin: 0;
+  }
 }
 .section.key-investing.future-building-container .library-btn2 .future-building .swiper-wrapper .swiper-slide-cards-2 .cards-listcards3 .cards-list-1-button1 {
   font-size: 14px;
