--- a/blocks/wealth-modal/wealth-modal.css
+++ b/blocks/wealth-modal/wealth-modal.css
@@ -21,7 +21,7 @@
 }
 @media (width <= 768px) {
   .modal dialog .section.wealth-register .wealth-modal-wrapper {
-    padding: 0px;
+    padding: 0;
   }
 }
 .modal dialog .section.wealth-register .wealth-modal .main-wealth-modal .cross-btn {
@@ -36,7 +36,7 @@
   margin: 0;
 }
 .modal dialog .section.wealth-register .ragis-lab-btn > .rag-lable {
-  margin: 0 0 40px 0;
+  margin: 0 0 40px;
   color: var(--text-black);
   font-family: var(--body);
   font-size: var(--sub-header-medium-size);
@@ -173,7 +173,7 @@
   box-shadow: 0 4px 16px 0 rgba(47, 64, 84, 0.12);
   border-radius: var(--border-radius-8);
   padding: 0;
-  margin: 5px 0 0 0;
+  margin: 5px 0 0;
   display: none;
   max-height: 150px;
   overflow-y: auto;
@@ -252,6 +252,7 @@
   margin-top: 36px;
   display: flex;
   flex-direction: column;
+  gap: 12px;
 }
 @media (max-width: 768px) {
   .modal dialog .section.wealth-register .ragis-lab-btn > .btn-mand {
@@ -318,7 +319,7 @@
   }
   .modal dialog .section.wealth-register .ragis-lab-btn .section.wealth-register {
     position: fixed;
-    bottom: 0px;
+    bottom: 0;
     z-index: 11;
   }
 }
@@ -333,5 +334,5 @@
 .modal.modal-journey .modal-content {
   display: flex;
   justify-content: end;
-  padding-right: 0px;
+  padding-right: 0;
 }/*# sourceMappingURL=wealth-modal.css.map */
