--- a/blocks/moedge-building/moedge-building.css
+++ b/blocks/moedge-building/moedge-building.css
@@ -33,6 +33,7 @@
   margin: 0;
   display: flex;
   flex-direction: column;
+  padding-bottom: 24px;
 }
 .moedge-building > div .moedge-build-sec3 .moedge-build-inner-text1 {
   display: flex;
@@ -558,10 +559,14 @@
 }
 
 /* --- Pagination Logic --- */
-.pr-news-list.moedge-building-container .moedge-building .hidden-item, .moedge-list.moedge-building-container .moedge-building .hidden-item, .our-author-detail.moedge-building-container .moedge-building .hidden-item {
+.pr-news-list.moedge-building-container .moedge-building .hidden-item,
+.moedge-list.moedge-building-container .moedge-building .hidden-item,
+.our-author-detail.moedge-building-container .moedge-building .hidden-item {
   display: none !important;
 }
-.pr-news-list.moedge-building-container .pagination-wrapper, .moedge-list.moedge-building-container .pagination-wrapper, .our-author-detail.moedge-building-container .pagination-wrapper {
+.pr-news-list.moedge-building-container .pagination-wrapper,
+.moedge-list.moedge-building-container .pagination-wrapper,
+.our-author-detail.moedge-building-container .pagination-wrapper {
   display: flex;
   width: 340px;
   justify-content: center;
@@ -571,12 +576,16 @@
   padding: 5px 0;
 }
 @media (max-width: 768px) {
-  .pr-news-list.moedge-building-container .pagination-wrapper, .moedge-list.moedge-building-container .pagination-wrapper, .our-author-detail.moedge-building-container .pagination-wrapper {
+  .pr-news-list.moedge-building-container .pagination-wrapper,
+  .moedge-list.moedge-building-container .pagination-wrapper,
+  .our-author-detail.moedge-building-container .pagination-wrapper {
     padding: 0;
     padding-bottom: 40px;
   }
 }
-.pr-news-list.moedge-building-container .pagination-wrapper button, .moedge-list.moedge-building-container .pagination-wrapper button, .our-author-detail.moedge-building-container .pagination-wrapper button {
+.pr-news-list.moedge-building-container .pagination-wrapper button,
+.moedge-list.moedge-building-container .pagination-wrapper button,
+.our-author-detail.moedge-building-container .pagination-wrapper button {
   display: flex;
   width: 22px;
   height: 22px;
@@ -598,7 +607,9 @@
   margin: 0;
   transition: all 0.2s ease;
 }
-.pr-news-list.moedge-building-container .pagination-btn, .moedge-list.moedge-building-container .pagination-btn, .our-author-detail.moedge-building-container .pagination-btn {
+.pr-news-list.moedge-building-container .pagination-btn,
+.moedge-list.moedge-building-container .pagination-btn,
+.our-author-detail.moedge-building-container .pagination-btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -607,16 +618,22 @@
   border-radius: 50%;
   color: #666;
 }
-.pr-news-list.moedge-building-container .pagination-btn:hover, .moedge-list.moedge-building-container .pagination-btn:hover, .our-author-detail.moedge-building-container .pagination-btn:hover {
+.pr-news-list.moedge-building-container .pagination-btn:hover,
+.moedge-list.moedge-building-container .pagination-btn:hover,
+.our-author-detail.moedge-building-container .pagination-btn:hover {
   background-color: #f0f0f0;
   color: #333;
 }
-.pr-news-list.moedge-building-container .pagination-btn.active, .moedge-list.moedge-building-container .pagination-btn.active, .our-author-detail.moedge-building-container .pagination-btn.active {
+.pr-news-list.moedge-building-container .pagination-btn.active,
+.moedge-list.moedge-building-container .pagination-btn.active,
+.our-author-detail.moedge-building-container .pagination-btn.active {
   color: var(--neutrals-white, #FFF);
   border-radius: 80px;
   background: #2E2A94;
 }
-.pr-news-list.moedge-building-container .pagination-arrow, .moedge-list.moedge-building-container .pagination-arrow, .our-author-detail.moedge-building-container .pagination-arrow {
+.pr-news-list.moedge-building-container .pagination-arrow,
+.moedge-list.moedge-building-container .pagination-arrow,
+.our-author-detail.moedge-building-container .pagination-arrow {
   font-size: 20px;
   font-weight: bold;
   color: #2E2A94;
@@ -625,11 +642,15 @@
   aspect-ratio: 4.36/7.54;
   fill: rgba(63, 63, 63, 0.8);
 }
-.pr-news-list.moedge-building-container .pagination-arrow:disabled, .moedge-list.moedge-building-container .pagination-arrow:disabled, .our-author-detail.moedge-building-container .pagination-arrow:disabled {
+.pr-news-list.moedge-building-container .pagination-arrow:disabled,
+.moedge-list.moedge-building-container .pagination-arrow:disabled,
+.our-author-detail.moedge-building-container .pagination-arrow:disabled {
   color: #ccc;
   cursor: not-allowed;
 }
-.pr-news-list.moedge-building-container .pagination-ellipsis, .moedge-list.moedge-building-container .pagination-ellipsis, .our-author-detail.moedge-building-container .pagination-ellipsis {
+.pr-news-list.moedge-building-container .pagination-ellipsis,
+.moedge-list.moedge-building-container .pagination-ellipsis,
+.our-author-detail.moedge-building-container .pagination-ellipsis {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -640,4 +661,10 @@
   font-style: normal;
   font-weight: 500;
   line-height: 18px;
+}
+
+@media (max-width: 768px) {
+  .our-author-detail.moedge-building-container .pagination-wrapper {
+    margin-top: 16px;
+  }
 }/*# sourceMappingURL=moedge-building.css.map */
