--- a/blocks/wealth-modal/wealth-modal.css
+++ b/blocks/wealth-modal/wealth-modal.css
@@ -182,6 +182,15 @@
 .modal dialog .section.wealth-register .ragis-lab-btn > .inp-lab .inp-lab-div ul::-webkit-scrollbar {
   display: none;
 }
+.modal dialog .section.wealth-register .ragis-lab-btn > .inp-lab .inp-lab-div ul::-webkit-scrollbar-track {
+  display: none;
+}
+.modal dialog .section.wealth-register .ragis-lab-btn > .inp-lab .inp-lab-div ul::-webkit-scrollbar-thumb {
+  display: none;
+}
+.modal dialog .section.wealth-register .ragis-lab-btn > .inp-lab .inp-lab-div ul::-webkit-scrollbar-thumb:hover {
+  display: none;
+}
 .modal dialog .section.wealth-register .ragis-lab-btn > .inp-lab .inp-lab-div ul li {
   padding: 16px;
   cursor: pointer;
