--- a/blocks/wealth-modal/wealth-modal.scss
+++ b/blocks/wealth-modal/wealth-modal.scss
@@ -212,6 +212,18 @@
             display: none;
           }
 
+          &::-webkit-scrollbar-track {
+            display: none;
+          }
+
+          &::-webkit-scrollbar-thumb {
+            display: none;
+          }
+
+          &::-webkit-scrollbar-thumb:hover {
+            display: none;
+          }
+
           li {
             padding: 16px;
             cursor: pointer;
