--- a/blocks/tabs/previous-studies.css
+++ b/blocks/tabs/previous-studies.css
@@ -1,4 +1,8 @@
 @import "../../../styles/fonts.css";
+main.nfo-nav .previous-studies-ctn.section:first-of-type {
+  margin-top: 0px;
+}
+
 .section.previous-studies-ctn.tabs-container {
   margin-top: 0;
 }
