--- a/blocks/tabs/previous-studies.scss
+++ b/blocks/tabs/previous-studies.scss
@@ -3,6 +3,13 @@
 @use "../../styles/common-theme/css/fluid-typography"as *;
 
 // previous-studies start
+
+main.nfo-nav {
+  .previous-studies-ctn.section:first-of-type {
+      margin-top: 0px;
+  }
+}
+
 .section.previous-studies-ctn.tabs-container {
   margin-top: 0;
 
