--- a/styles/common.scss
+++ b/styles/common.scss
@@ -3,8 +3,8 @@
 /* media-feature-range-notation */
 
 @use "sass:map";
-@use "../styles/common-theme/css/variables_mixins"as *;
-@use "../styles/common-theme/css/fluid-typography"as *;
+@use "../styles/common-theme/css/variables_mixins" as *;
+@use "../styles/common-theme/css/fluid-typography" as *;
 @import "../blocks/moedge-article-details/moedge-article-details.css";
 
 .section.download {
@@ -1646,36 +1646,41 @@ main>.section.previous-studies-tab.tabs-container {
     }
   }
 }
+
 // static QGLP component end
 
 //Why Choose Us Static Start
 
-.why-choose-us{
+.why-choose-us {
 
-  .choose-title1{
+  .choose-title1 {
     padding-top: 64px;
-     @include media(mobile){
+
+    @include media(mobile) {
       padding-top: 44px;
-     }
-    .choose-us-para1{
-    color: var(--blue-1-800-primary);
-    font-feature-settings: 'ss01' on, 'ss04' on, 'cv01' on, 'cv02' on, 'cv03' on, 'cv04' on, 'cv06' on, 'cv09' on, 'cv10' on, 'cv11' on, 'liga' off;
-    font-family: var(--title);
-    font-size: var(--heading-h2-size);
-    font-style: normal;
-    font-weight: 600;
-    line-height: var(--heading-h2-line-height);
-    margin-bottom: 8px;
-    max-width: 712px;
-    width: 100%;
-    @include media(mobile){
-      font-size: 34px;
-      line-height: 40px;
-      margin-bottom: 8px;
-      margin-top: 0px;
-     }
     }
-    .choose-us-para2{
+
+    .choose-us-para1 {
+      color: var(--blue-1-800-primary);
+      font-feature-settings: 'ss01' on, 'ss04' on, 'cv01' on, 'cv02' on, 'cv03' on, 'cv04' on, 'cv06' on, 'cv09' on, 'cv10' on, 'cv11' on, 'liga' off;
+      font-family: var(--title);
+      font-size: var(--heading-h2-size);
+      font-style: normal;
+      font-weight: 600;
+      line-height: var(--heading-h2-line-height);
+      margin-bottom: 8px;
+      max-width: 712px;
+      width: 100%;
+
+      @include media(mobile) {
+        font-size: 34px;
+        line-height: 40px;
+        margin-bottom: 8px;
+        margin-top: 0px;
+      }
+    }
+
+    .choose-us-para2 {
       color: var(--text-sub-header);
       font-feature-settings: 'ss01' on, 'ss04' on, 'cv01' on, 'cv02' on, 'cv03' on, 'cv04' on, 'cv06' on, 'cv09' on, 'cv10' on, 'cv11' on;
       font-family: var(--body);
@@ -1687,15 +1692,18 @@ main>.section.previous-studies-tab.tabs-container {
       margin-bottom: 28px;
       max-width: 712px;
       width: 100%;
-       @include media(mobile){
+
+      @include media(mobile) {
         font-size: var(--paragraph-small-regular-size);
         line-height: var(--paragraph-small-regular-line-height);
         margin-bottom: 20px;
-     }
+      }
     }
-    .choose-us-para3{
+
+    .choose-us-para3 {
       margin: 0px;
-      a{
+
+      a {
         color: var(--Text-White, #FFF);
         text-align: center;
         font-feature-settings: 'ss01' on, 'ss04' on, 'cv01' on, 'cv02' on, 'cv03' on, 'cv04' on, 'cv06' on, 'cv09' on, 'cv10' on, 'cv11' on;
@@ -1711,55 +1719,65 @@ main>.section.previous-studies-tab.tabs-container {
         padding: 8px 12px;
         display: none;
         border: none;
-         @include media(mobile){
-           margin-top: 0px;
-           margin-bottom: 30px;
-           display: block;
-     }
+
+        @include media(mobile) {
+          margin-top: 0px;
+          margin-bottom: 30px;
+          display: block;
+        }
       }
     }
-    .choose-us-para5{
+
+    .choose-us-para5 {
       display: none;
       margin: 0px;
-      @include media(mobile){
+
+      @include media(mobile) {
         display: block;
       }
-      .choose-us-img1{
+
+      .choose-us-img1 {
         display: none;
         margin: 0px;
         height: 100%;
         display: block;
-        @include media(mobile){
+
+        @include media(mobile) {
           display: block;
           line-height: 0px;
         }
       }
     }
-    .choose-us-para4{
+
+    .choose-us-para4 {
       margin: 0px;
-       @include media(mobile){
+
+      @include media(mobile) {
         display: none;
         margin: 0px;
-       }
-      .choose-us-img1{
+      }
+
+      .choose-us-img1 {
         height: 100%;
         display: block;
-       @include media(mobile){
-        display: none;
-        margin: 0px;
-       }
-      } 
-      } 
+
+        @include media(mobile) {
+          display: none;
+          margin: 0px;
+        }
+      }
     }
   }
+}
 
 .section.why-choose-card {
   padding: 20px 0;
   margin: 80px 0;
-  @include media(mobile){
-      padding: 0px;
-      margin-bottom: 80px;
-    }
+
+  @include media(mobile) {
+    padding: 0px;
+    margin-bottom: 80px;
+  }
 
   .cards-wrapper {
     .cards {
@@ -1772,11 +1790,11 @@ main>.section.previous-studies-tab.tabs-container {
 
         display: flex;
         flex-wrap: wrap;
-        gap: 60px 64px; 
+        gap: 60px 64px;
       }
 
       li {
-        flex: 0 0 calc(50% - 32px);         
+        flex: 0 0 calc(50% - 32px);
         display: flex;
         align-items: flex-start;
         gap: 8px;
@@ -1790,7 +1808,8 @@ main>.section.previous-studies-tab.tabs-container {
             width: 68px;
             height: 68px;
             display: block;
-             @include media(mobile){
+
+            @include media(mobile) {
               width: 48px;
               height: 48px;
             }
@@ -1808,11 +1827,12 @@ main>.section.previous-studies-tab.tabs-container {
             font-size: var(--body-large-semibold-size);
             font-style: normal;
             font-weight: 600;
-            line-height: var(--body-large-semibold-line-height); 
+            line-height: var(--body-large-semibold-line-height);
             margin: 0px 0px 8px 0px;
             max-width: 510px;
             width: 100%;
-            @include media(mobile){
+
+            @include media(mobile) {
               max-width: unset;
             }
           }
@@ -1828,7 +1848,8 @@ main>.section.previous-studies-tab.tabs-container {
             margin: 0px;
             max-width: 510px;
             width: 100%;
-             @include media(mobile){
+
+            @include media(mobile) {
               max-width: unset;
             }
           }
@@ -1842,13 +1863,117 @@ main>.section.previous-studies-tab.tabs-container {
   .section.why-choose-card {
 
     .cards-wrapper .cards ul {
-      gap: 32px 0; 
+      gap: 32px 0;
     }
 
     .cards-wrapper .cards li {
-      flex: 0 0 100%; 
+      flex: 0 0 100%;
     }
   }
 }
 
 //why choose us ststic end 
+
+// why qglp start
+
+.why-qglp {
+  @include media(mobile) {
+    // padding: 16px;
+    margin: 0 16px;
+    display: flex ;
+  }
+  .default-content-wrapper {
+    border-radius: 16px;
+    background: var(--blue-1-800-primary);
+    padding: 54px 40px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 70px;
+    
+    @include media(mobile) {
+      padding: 54px 16px;
+      margin: 0 16px;
+    }
+
+    ul {
+      list-style: none;
+    }
+
+    .why-qglp-ctn1 {
+      margin: 0;
+      color: var(--neutrals-white);
+      font-family: var(--title);
+      font-size: var(--heading-h5-size);
+      font-style: normal;
+      font-weight: 600;
+      line-height: var(--heading-h5-line-height);
+    }
+
+    .why-qglp-ctn2 {
+      margin: 0;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      column-gap: 120px;
+
+          @include media(mobile) {
+      column-gap: 0;
+      row-gap: 40px;
+    }
+
+      >.comlist {
+        display: inline;
+        max-width: 304px;
+        width: 100%;
+        margin: 0;
+
+        .why-qglp-int1 {
+          margin: 0;
+
+          .why-qglp-wrp1 {
+            margin-bottom: 10px;
+            line-height: 0;
+            
+            .icon {
+              width: 64px;
+              height: 64px;
+            }
+          }
+
+          .why-qglp-wrp2 {
+            color: var(--neutrals-white);
+            font-family: var(--body);
+            font-size: var(--body-large-regular-size);
+            font-style: normal;
+            font-weight: 400;
+            line-height: var(--body-large-regular-line-height);
+
+            @include media(mobile) {
+              color: var(--text-white);
+              font-size: var(--paragraph-medium-regular-size);
+              line-height: var(--paragraph-medium-regular-line-height);
+            }
+            
+            strong {
+              color: var(--neutrals-white);
+              font-family: var(--body);
+              font-size: var(--body-large-regular-size);
+              font-style: normal;
+              font-weight: 600;
+              line-height: var(--body-large-regular-line-height);
+
+              @include media(mobile) {
+                color: var(--text-white);
+                font-size: var(--paragraph-medium-regular-size);
+                line-height: var(--paragraph-medium-regular-line-height);
+              }
+            }
+          }
+        }
+      }
+    }
+
+  }
+}
+
+// why qglp end
