--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1904,7 +1904,7 @@ main>.section.previous-studies-tab.tabs-container {
     padding-top: 40px;
   }
 
-  .whyQGLPWrapper {
+  .whyqglpWrapper {
     border-radius: 16px;
     background: var(--blue-1-800-primary);
     padding: 54px 40px;
@@ -2009,7 +2009,7 @@ main>.section.previous-studies-tab.tabs-container {
     padding: 0 16px;
   }
 
-  .promiseQGLPWrapper {
+  .promiseqglpPWrapper {
     position: relative;
     display: flex;
     justify-content: center;
