--- a/styles/common.css
+++ b/styles/common.css
@@ -1486,7 +1486,7 @@ main > .section.previous-studies-tab.tabs-container .tab-dropdown-wrap .tab-drop
     padding-top: 40px;
   }
 }
-.why-qglp .whyQGLPWrapper {
+.why-qglp .whyqglpWrapper {
   border-radius: 16px;
   background: var(--blue-1-800-primary);
   padding: 54px 40px;
@@ -1495,15 +1495,15 @@ main > .section.previous-studies-tab.tabs-container .tab-dropdown-wrap .tab-drop
   row-gap: 70px;
 }
 @media (max-width: 768px) {
-  .why-qglp .whyQGLPWrapper {
+  .why-qglp .whyqglpWrapper {
     padding: 54px 16px;
     margin: 0 16px;
   }
 }
-.why-qglp .whyQGLPWrapper ul {
+.why-qglp .whyqglpWrapper ul {
   list-style: none;
 }
-.why-qglp .whyQGLPWrapper .why-qglp-ctn1 {
+.why-qglp .whyqglpWrapper .why-qglp-ctn1 {
   margin: 0;
   color: var(--neutrals-white);
   font-family: var(--title);
@@ -1512,7 +1512,7 @@ main > .section.previous-studies-tab.tabs-container .tab-dropdown-wrap .tab-drop
   font-weight: 600;
   line-height: var(--heading-h5-line-height);
 }
-.why-qglp .whyQGLPWrapper .why-qglp-ctn2 {
+.why-qglp .whyqglpWrapper .why-qglp-ctn2 {
   margin: 0;
   display: flex;
   flex-direction: row;
@@ -1521,30 +1521,30 @@ main > .section.previous-studies-tab.tabs-container .tab-dropdown-wrap .tab-drop
        column-gap: 120px;
 }
 @media (max-width: 768px) {
-  .why-qglp .whyQGLPWrapper .why-qglp-ctn2 {
+  .why-qglp .whyqglpWrapper .why-qglp-ctn2 {
     -moz-column-gap: 0;
          column-gap: 0;
     row-gap: 40px;
   }
 }
-.why-qglp .whyQGLPWrapper .why-qglp-ctn2 > .comlist {
+.why-qglp .whyqglpWrapper .why-qglp-ctn2 > .comlist {
   display: inline;
   max-width: 304px;
   width: 100%;
   margin: 0;
 }
-.why-qglp .whyQGLPWrapper .why-qglp-ctn2 > .comlist .why-qglp-int1 {
+.why-qglp .whyqglpWrapper .why-qglp-ctn2 > .comlist .why-qglp-int1 {
   margin: 0;
 }
-.why-qglp .whyQGLPWrapper .why-qglp-ctn2 > .comlist .why-qglp-int1 .why-qglp-wrp1 {
+.why-qglp .whyqglpWrapper .why-qglp-ctn2 > .comlist .why-qglp-int1 .why-qglp-wrp1 {
   margin-bottom: 10px;
   line-height: 0;
 }
-.why-qglp .whyQGLPWrapper .why-qglp-ctn2 > .comlist .why-qglp-int1 .why-qglp-wrp1 .icon {
+.why-qglp .whyqglpWrapper .why-qglp-ctn2 > .comlist .why-qglp-int1 .why-qglp-wrp1 .icon {
   width: 64px;
   height: 64px;
 }
-.why-qglp .whyQGLPWrapper .why-qglp-ctn2 > .comlist .why-qglp-int1 .why-qglp-wrp2 {
+.why-qglp .whyqglpWrapper .why-qglp-ctn2 > .comlist .why-qglp-int1 .why-qglp-wrp2 {
   color: var(--neutrals-white);
   font-family: var(--body);
   font-size: var(--body-large-regular-size);
@@ -1553,13 +1553,13 @@ main > .section.previous-studies-tab.tabs-container .tab-dropdown-wrap .tab-drop
   line-height: var(--body-large-regular-line-height);
 }
 @media (max-width: 768px) {
-  .why-qglp .whyQGLPWrapper .why-qglp-ctn2 > .comlist .why-qglp-int1 .why-qglp-wrp2 {
+  .why-qglp .whyqglpWrapper .why-qglp-ctn2 > .comlist .why-qglp-int1 .why-qglp-wrp2 {
     color: var(--text-white);
     font-size: var(--paragraph-medium-regular-size);
     line-height: var(--paragraph-medium-regular-line-height);
   }
 }
-.why-qglp .whyQGLPWrapper .why-qglp-ctn2 > .comlist .why-qglp-int1 .why-qglp-wrp2 strong {
+.why-qglp .whyqglpWrapper .why-qglp-ctn2 > .comlist .why-qglp-int1 .why-qglp-wrp2 strong {
   color: var(--neutrals-white);
   font-family: var(--body);
   font-size: var(--body-large-regular-size);
@@ -1568,7 +1568,7 @@ main > .section.previous-studies-tab.tabs-container .tab-dropdown-wrap .tab-drop
   line-height: var(--body-large-regular-line-height);
 }
 @media (max-width: 768px) {
-  .why-qglp .whyQGLPWrapper .why-qglp-ctn2 > .comlist .why-qglp-int1 .why-qglp-wrp2 strong {
+  .why-qglp .whyqglpWrapper .why-qglp-ctn2 > .comlist .why-qglp-int1 .why-qglp-wrp2 strong {
     color: var(--text-white);
     font-size: var(--paragraph-medium-regular-size);
     line-height: var(--paragraph-medium-regular-line-height);
@@ -1584,7 +1584,7 @@ main > .section.previous-studies-tab.tabs-container .tab-dropdown-wrap .tab-drop
     padding: 0 16px;
   }
 }
-.promise-qglp .promiseQGLPWrapper {
+.promise-qglp .promiseqglpPWrapper {
   position: relative;
   display: flex;
   justify-content: center;
@@ -1595,36 +1595,36 @@ main > .section.previous-studies-tab.tabs-container .tab-dropdown-wrap .tab-drop
   align-items: center;
 }
 @media (max-width: 768px) {
-  .promise-qglp .promiseQGLPWrapper {
+  .promise-qglp .promiseqglpPWrapper {
     flex-direction: column;
     padding: 0;
     row-gap: 40px;
     align-items: start;
   }
 }
-.promise-qglp .promiseQGLPWrapper .promise-qglp-ctn1 {
+.promise-qglp .promiseqglpPWrapper .promise-qglp-ctn1 {
   position: absolute;
   left: 40px;
   top: 0;
   margin: 0;
 }
 @media (max-width: 768px) {
-  .promise-qglp .promiseQGLPWrapper .promise-qglp-ctn1 {
+  .promise-qglp .promiseqglpPWrapper .promise-qglp-ctn1 {
     left: 0px;
     top: 0;
   }
 }
-.promise-qglp .promiseQGLPWrapper .promise-qglp-ctn1 .icon {
+.promise-qglp .promiseqglpPWrapper .promise-qglp-ctn1 .icon {
   width: 192px;
   height: 203px;
 }
 @media (max-width: 768px) {
-  .promise-qglp .promiseQGLPWrapper .promise-qglp-ctn1 .icon {
+  .promise-qglp .promiseqglpPWrapper .promise-qglp-ctn1 .icon {
     width: 113px;
     height: 120px;
   }
 }
-.promise-qglp .promiseQGLPWrapper .promise-qglp-ctn2 {
+.promise-qglp .promiseqglpPWrapper .promise-qglp-ctn2 {
   margin: 0 0 0 72px;
   padding: 12px 0;
   color: var(--blue-1-800-primary);
@@ -1636,7 +1636,7 @@ main > .section.previous-studies-tab.tabs-container .tab-dropdown-wrap .tab-drop
   /* 120% */
 }
 @media (max-width: 768px) {
-  .promise-qglp .promiseQGLPWrapper .promise-qglp-ctn2 {
+  .promise-qglp .promiseqglpPWrapper .promise-qglp-ctn2 {
     margin: 0 0 0 46px;
     padding: 48px 0;
     color: var(--blue-1-800-primary);
@@ -1649,7 +1649,7 @@ main > .section.previous-studies-tab.tabs-container .tab-dropdown-wrap .tab-drop
     width: fit-content;
   }
 }
-.promise-qglp .promiseQGLPWrapper .promise-qglp-ctn3 {
+.promise-qglp .promiseqglpPWrapper .promise-qglp-ctn3 {
   margin: 0;
   max-width: 720px;
   width: 100%;
@@ -1660,7 +1660,7 @@ main > .section.previous-studies-tab.tabs-container .tab-dropdown-wrap .tab-drop
   font-weight: 400;
   line-height: var(--body-xlarge-regular-line-height);
 }
-.promise-qglp .promiseQGLPWrapper .promise-qglp-ctn3 .promise-qglp-ext1 {
+.promise-qglp .promiseqglpPWrapper .promise-qglp-ctn3 .promise-qglp-ext1 {
   color: var(--text-body);
   font-family: var(--body);
   font-size: var(--body-xlarge-bold-size);
