--- a/blocks/previous-studies-blog/previous-studies-blog.scss
+++ b/blocks/previous-studies-blog/previous-studies-blog.scss
@@ -73,7 +73,7 @@ main .previous-studies-blog-container.section.previous-studies-each-details {
                         z-index: 5000;
                         border-radius: 8px;
 
-                        .ps-cont1 {
+                        .ps-cont-plybtn {
                             line-height: 0;
                             height: 100%;
                             display: block;
