--- a/blocks/previous-studies-blog/previous-studies-blog.css
+++ b/blocks/previous-studies-blog/previous-studies-blog.css
@@ -63,7 +63,7 @@ main .previous-studies-blog-container.section.previous-studies-each-details .pre
   z-index: 5000;
   border-radius: 8px;
 }
-main .previous-studies-blog-container.section.previous-studies-each-details .previous-studies-blog-wrapper .previous-studies-blog > .comlist .ps-in1 .ps-subcont1 .ps-cont1 {
+main .previous-studies-blog-container.section.previous-studies-each-details .previous-studies-blog-wrapper .previous-studies-blog > .comlist .ps-in1 .ps-subcont1 .ps-cont-plybtn {
   line-height: 0;
   height: 100%;
   display: block;
