--- a/blocks/error-screen/error-screen.css
+++ b/blocks/error-screen/error-screen.css
@@ -8,6 +8,7 @@ main.nfo-nav .section.cards-container.error-screen-container {
   main .section.cards-container.error-screen-container,
   main.nfo-nav .section.cards-container.error-screen-container {
     margin: 59px 0 120px 0;
+    padding-top: 120px;
   }
 }
 main .section.cards-container.error-screen-container .cards.error-screen-wrap1,
@@ -112,6 +113,9 @@ main.nfo-nav .section.cards-container.error-screen-container .cards.error-screen
   padding: 12px;
   border: unset;
   height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 @media (max-width: 768px) {
   main .section.cards-container.error-screen-container .cards.error-screen-wrap1 ul.error-screen-ul1 li.comlist .cards-card-body p.button-container a.errscrn-inner-cont1,
@@ -121,67 +125,67 @@ main.nfo-nav .section.cards-container.error-screen-container .cards.error-screen
   }
 }
 
-.error-screen-container#screen-400 .errscrn-img-cont1 {
+.error-screen-container.screen-400 .errscrn-img-cont1 {
   height: 196px;
   width: 145px;
 }
 @media (max-width: 768px) {
-  .error-screen-container#screen-400 .errscrn-img-cont1 {
+  .error-screen-container.screen-400 .errscrn-img-cont1 {
     height: 160px;
     width: 110px;
   }
 }
 
-.error-screen-container#screen-401 .errscrn-img-cont1 {
+.error-screen-container.screen-401 .errscrn-img-cont1 {
   height: 196px;
   width: 112px;
 }
 @media (max-width: 768px) {
-  .error-screen-container#screen-401 .errscrn-img-cont1 {
+  .error-screen-container.screen-401 .errscrn-img-cont1 {
     height: 160px;
     width: 92px;
   }
 }
 
-.error-screen-container#screen-403 .errscrn-img-cont1 {
+.error-screen-container.screen-403 .errscrn-img-cont1 {
   height: 196px;
   width: 121px;
 }
 @media (max-width: 768px) {
-  .error-screen-container#screen-403 .errscrn-img-cont1 {
+  .error-screen-container.screen-403 .errscrn-img-cont1 {
     height: 160px;
     width: 99px;
   }
 }
 
-.error-screen-container#screen-408 .errscrn-img-cont1 {
+.error-screen-container.screen-408 .errscrn-img-cont1 {
   height: 196px;
   width: 132px;
 }
 @media (max-width: 768px) {
-  .error-screen-container#screen-408 .errscrn-img-cont1 {
+  .error-screen-container.screen-408 .errscrn-img-cont1 {
     height: 160px;
     width: 108px;
   }
 }
 
-.error-screen-container#screen-500 .errscrn-img-cont1 {
+.error-screen-container.screen-500 .errscrn-img-cont1 {
   height: 196px;
   width: 156px;
 }
 @media (max-width: 768px) {
-  .error-screen-container#screen-500 .errscrn-img-cont1 {
+  .error-screen-container.screen-500 .errscrn-img-cont1 {
     height: 160px;
     width: 127px;
   }
 }
 
-.error-screen-container#service-screen .cards .cards-card-image {
+.error-screen-container.service-screen .cards .cards-card-image {
   height: 196px;
   width: 144px;
 }
 @media (max-width: 768px) {
-  .error-screen-container#service-screen .cards .cards-card-image {
+  .error-screen-container.service-screen .cards .cards-card-image {
     height: 160px;
     width: 117px;
   }
