--- a/blocks/moedge-building/moedge-building.scss
+++ b/blocks/moedge-building/moedge-building.scss
@@ -212,9 +212,11 @@
 
             .moedge-build-inner-text4 {
                 margin: 0;
-
+                line-height: 0;
+                
                 p {
                     margin: 0;
+                    line-height: 0;
 
                     .moedge-build-list-content1 {
                         background-color: transparent;
