--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -486,9 +486,9 @@ footer .footer[data-block-status="loaded"] {
     margin-top: calc(var(--header-height) + 32px);
 }
 
-.test {
-    background-color: red;
-}
+// .test {
+//     background-color: red;
+// }
 
 .our-popular-funds,
 .known-our-funds {
